--- a/testscores.html
+++ b/testscores.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Test Score App</title>
     <link rel="stylesheet" href="styles.css" />
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-    <script src="test_scores.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="test_scores.js"></script>
 </head>
 
 <body>
